--- a/src/app/view/ventas/ventas-dashboard.component.html
+++ b/src/app/view/ventas/ventas-dashboard.component.html
@@ -59,7 +59,7 @@
   </div>
 
   <!-- Panel dinámico -->
-  <div class="card shadow-sm p-3 mt-3">
+  <div class="card shadow-sm mt-1">
     <app-generar-venta *ngIf="vista === 'venta'"></app-generar-venta>
     <app-presupuesto *ngIf="vista === 'presupuesto'"></app-presupuesto>
     <app-historial-ventas *ngIf="vista === 'historial'"></app-historial-ventas>
