--- a/src/app/view/ventas/generar-venta/generar-venta.component.scss
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.scss
@@ -4,16 +4,16 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-  //  padding: 1rem;
+    //  padding: 1rem;
     background: var(--degradado-pastel) !important;
 }
 
-.form-check-label{
+.form-check-label {
     font-size: 1rem !important;
 }
 
-.form-switch{
-    left: 35px;
+.form-switch {
+    //left: 35px;
 }
 
 .panel-contexto,
@@ -152,6 +152,52 @@ ng-select {
         transition: all 0.2s ease;
     }
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 46px;
+    height: 24px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.3s;
+    border-radius: 24px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.3s;
+    border-radius: 50%;
+}
+
+input:checked+.slider {
+    background-color: #0d6efd;
+}
+
+input:checked+.slider:before {
+    transform: translateX(22px);
+}
+
 
 /* ✅ Responsividad para tablets y móviles */
 @media (max-width: 992px) {
